Fixed some PMD errors
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/trunk/cdk@9810 eb4e18e3-b210-0410-a6ab-dec725e4b171